--- a/arch/x86/configs/esther.config
+++ b/arch/x86/configs/esther.config
@@ -566,8 +566,8 @@ CONFIG_X86_SPEEDSTEP_SMI=m
 CONFIG_X86_P4_CLOCKMOD=m
 CONFIG_X86_CPUFREQ_NFORCE2=m
 CONFIG_X86_LONGRUN=m
-CONFIG_X86_LONGHAUL=m
-# CONFIG_X86_E_POWERSAVER is not set
+# CONFIG_X86_LONGHAUL is not set
+CONFIG_X86_E_POWERSAVER=m
 
 #
 # shared options
