--- a/arch/x86/configs/lenovo.config
+++ b/arch/x86/configs/lenovo.config
@@ -6491,8 +6491,8 @@ CONFIG_USB_HIDDEV=y
 #
 # USB HID Boot Protocol drivers
 #
-# CONFIG_USB_KBD is not set
-# CONFIG_USB_MOUSE is not set
+CONFIG_USB_KBD=m
+CONFIG_USB_MOUSE=m
 # end of USB HID Boot Protocol drivers
 # end of USB HID support
 
